force-app/main/default/objects/RecordChange__e/RecordChange__e.object-meta.xml
<CustomObject>
    <label>RecordChange</label>
    <pluralLabel>RecordChanges</pluralLabel>
</CustomObject>