force-app/main/default/objects/RecordChange__e/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <label>recordId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>