force-app/main/default/objects/RecordChange__e/fields/userName__c.field-meta.xml
<CustomField>
    <fullName>userName__c</fullName>
    <label>userName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>